# ledger-app-burst

./: .gitignore  CMakeLists.txt  Makefile  demo.py
debug/: app.asm  app.map
dep/: curve25519_i64.d  cx_compliance_141.d  main.d  os.d  os_io_seproxyhal.d  os_printf.d  syscalls.d  usbd_ccid_cmd.d  usbd_ccid_core.d  usbd_ccid_if.d  usbd_conf.d  usbd_core.d  usbd_ctlreq.d  usbd_hid.d  usbd_impl.d  usbd_ioreq.d
src/: curve25519_i64.c  curve25519_i64.h  main.c
src/curve/: curve25519_i64.c
src/rs/: rs_address.c  rs_address.h
